<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_transactions"
        android:title="@string/transactions" />

    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/ic_budget"
        android:title="@string/budget" />

    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports"
        android:title="@string/reports" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu> 